--- a/DarkModeApp/DarkModeApp/Base.lproj/Main.storyboard
+++ b/DarkModeApp/DarkModeApp/Base.lproj/Main.storyboard
@@ -1,24 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qbJ-am-Hu1">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="DarkModeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0TI-ZQ-MqQ">
+                                <rect key="frame" x="114" y="331" width="165" height="97"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Change"/>
+                                <connections>
+                                    <segue destination="loc-ab-Hx1" kind="show" id="m6G-3B-CkW"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0TI-ZQ-MqQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0Lk-o1-dKH"/>
+                            <constraint firstItem="0TI-ZQ-MqQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="114" id="DGf-jt-3U7"/>
+                            <constraint firstItem="0TI-ZQ-MqQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="228" id="cpK-NA-fBp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0TI-ZQ-MqQ" secondAttribute="bottom" constant="390" id="jaw-uF-FNj"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Va6-cc-GTZ"/>
+                    <connections>
+                        <outlet property="changeButton" destination="0TI-ZQ-MqQ" id="UTJ-PO-dBK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1463.3587786259541" y="17.605633802816904"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vKb-kc-zTQ">
+            <objects>
+                <viewController id="loc-ab-Hx1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gc8-0d-dfk">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="DarkMode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eHq-P2-pNy">
+                                <rect key="frame" x="77" y="295" width="238" height="128"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="aJs-2s-kEV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eHq-P2-pNy" firstAttribute="centerX" secondItem="gc8-0d-dfk" secondAttribute="centerX" id="2CC-EQ-qtB"/>
+                            <constraint firstItem="eHq-P2-pNy" firstAttribute="top" secondItem="aJs-2s-kEV" secondAttribute="top" constant="192" id="E5W-eJ-FqU"/>
+                            <constraint firstItem="aJs-2s-kEV" firstAttribute="bottom" secondItem="eHq-P2-pNy" secondAttribute="bottom" constant="395" id="pZM-cL-XTr"/>
+                            <constraint firstItem="eHq-P2-pNy" firstAttribute="leading" secondItem="aJs-2s-kEV" secondAttribute="leading" constant="77" id="yE2-kj-rV8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="58p-qV-vi9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rj6-4I-Gr5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2281.679389312977" y="17.605633802816904"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GDM-k4-Jh4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qbJ-am-Hu1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RPo-8h-Yu2">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vx4-Qi-VxE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lxF-C5-m3H" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="536.64122137404581" y="17.605633802816904"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
